@@ -29,3 +29,4 @@ Steven Elliott <selliott4@austin.rr.com> - Fuzzy pattern matching for xcscope.el
 Ragho Mahalingam <ragho@mahalingam.com> - webcscope
 Dmitry Obukhov - Hilight code in webcscope
 David Cohrs - LEX and SUNOS scanner fix
+Valentin Podlovchenko - Overflow prevention and link recursion fix patch
